[package]
name = "polkadot-rpc"
version = "0.8.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"  }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"  }
sp-keystore = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"  }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"  }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"  }
sp-consensus = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"  }
sp-consensus-babe = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"  }
sc-chain-spec = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-rpc = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-consensus-babe = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"}
sc-consensus-babe-rpc = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"}
sc-consensus-epochs = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"}
sc-finality-grandpa = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-finality-grandpa-rpc = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-keystore = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"}
sc-sync-state-rpc = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"}
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits"  }
pallet-transaction-payment-rpc = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
parity-scale-codec = { version = "1.3.6", default-features = false }
sp-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
