[package]
name = "polkadot-test-client"
version = "0.8.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-service = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-consensus = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-inherents = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-timestamp = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-consensus = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-state-machine = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
