[package]
name = "polkadot-test-service"
version = "0.8.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.2"
tracing = "0.1.22"
tracing-futures = "0.2.4"
rand = "0.8.2"
tempfile = "3.2.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-authority-discovery = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
babe = { package = "sc-consensus-babe", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
consensus_common = { package = "sp-consensus", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
frame-benchmarking = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
frame-system = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
inherents = { package = "sp-inherents", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
pallet-staking = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
pallet-balances = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
pallet-transaction-payment = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-chain-spec = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-cli = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-client-api = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-consensus = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-executor = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-network = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sc-transaction-pool = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
service = { package = "sc-service", git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits", default-features = false }
sp-arithmetic = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-keyring = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
sp-state-machine = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
substrate-test-client = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits", default-features = false }
serde_json = "1.0.61"
substrate-test-utils = { git = "https://github.com/tomaka/polkadot", branch = "add-notifs-limits" }
tokio = { version = "0.2", features = ["macros"] }
